--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
 
 body {
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
 }
 
 .wrapper {
@@ -17,14 +17,14 @@ body {
 .main {
   height: 90vh;
   background: #fff;
-  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
   width: 80%;
   margin: 0 auto;
 }
 
 .title-container {
   height: 90vh;
-  background: url("img/bg.jpg") center center no-repeat;
+  background: url('img/bg.jpg') center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -45,7 +45,7 @@ body {
   font-weight: 100;
   letter-spacing: 1px;
   line-height: 1.5;
-  font-family: "Merriweather", serif;
+  font-family: 'Merriweather', serif;
 }
 
 .form-container {
@@ -55,7 +55,7 @@ body {
   padding-left: 50px;
 }
 
-input[type="text"] {
+input[type='text'] {
   background-color: transparent;
   border: 0;
   border-bottom: solid 1px #f16051;
@@ -69,31 +69,13 @@ input[type="text"] {
   font-size: 20px;
 }
 
-input[type="text"] { 
-    outline: none;
+input[type='text'] {
+  outline: none;
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
-    -webkit-text-fill-color: #fff !important;
-}
-
-button {
-  border: 0;
-  padding: 8px 20px;
-  margin: 0 2px;
-  border-radius: 2px;
-  font-weight: lighter;
-  letter-spacing: 1px;
-  font-size: 15px;
-  cursor: pointer;
-  background-color: #f16051;
-  color: #fff;
-  font-weight: 100;
-}
-
-button:active {
-  outline: none;
+  -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+  -webkit-text-fill-color: #fff !important;
 }
 
 .weather__info {
@@ -105,7 +87,7 @@ button:active {
 
 .weather__key {
   color: #f16051;
-  border-bottom: solid 2px rgba(255,255,255,0.06);
+  border-bottom: solid 2px rgba(255, 255, 255, 0.06);
   padding: 20px 0 20px 0;
   font-weight: 400;
 }
